--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>3.11.0-beta1</version>
+            <version>3.10.1</version>
         </dependency>
     </dependencies>
 
